# ov_secondary_scarf

./: .gitignore  README.md
ov_secondary_camera_models/: CMakeLists.txt  package.xml
ov_secondary_camera_models/camera_calib_example/: readme.txt
ov_secondary_camera_models/include/camodocal/gpl/: EigenQuaternionParameterization.h
ov_secondary_camera_models/src/calib/: CameraCalibration.cc
ov_secondary_camera_models/src/gpl/: EigenQuaternionParameterization.cc
ov_secondary_loop_fusion/: CMakeLists.txt  package.xml
ov_secondary_loop_fusion/config/: master_config.yaml  vins_rviz_config.rviz
ov_secondary_loop_fusion/launch/: posegraph.launch  posegraph.launch.py  record_eth.launch  record_tumvi.launch
ov_secondary_loop_fusion/scripts/: compute_ate_evo.py  export_final_trajectory_csv.py  extract_bag_data.py  run_ros_eth.sh  run_ros_tumvi.sh
ov_secondary_loop_fusion/src/: keyframe.cpp  keyframe.h  loop_fusion_io.cpp  loop_fusion_io.h  loop_fusion_node.cpp  loop_fusion_node.h  parameters.h  pose_graph.cpp  pose_graph.h
ov_secondary_loop_fusion/src/utility/: compressed_image.h
