<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ov_secondary_loop_fusion</name>
  <version>0.0.0</version>
  <description>The ov_secondary_loop_fusion package</description>
  <maintainer email="dvorak@todo.todo">dvorak</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_cpp</depend>
  <depend>ov_secondary_camera_models</depend>
  <depend>rosbag2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
